Update Bloxxy Hub V1.1.1

--- a/Bloxxy Hub V1.1.1
+++ b/Bloxxy Hub V1.1.1
@@ -1,8 +1,9 @@
 --[[
 
-		Bloxxy Anims Hub 
-		ASXE,IAN
-		Version 1.1.1
+		Name: Bloxxy.Animations.Hub
+		Ui: Asxe- Arceus X Edits
+                Key: Ian
+		Version: 1.1.1
 
 ]]
 
@@ -67,6 +68,7 @@ local UICorner_23 = Instance.new("UICorner")
 BloxxyAnimationsHub.Name = "Bloxxy Animations Hub"
 BloxxyAnimationsHub.Parent = game.Players.LocalPlayer:WaitForChild("PlayerGui")
 BloxxyAnimationsHub.ZIndexBehavior = Enum.ZIndexBehavior.Sibling
+BloxxyAnimationsHub.ResetOnSpawn = false
 
 Frame.Parent = BloxxyAnimationsHub
 Frame.BackgroundColor3 = Color3.new(0.415686, 0.415686, 0.415686)
@@ -587,6 +589,8 @@ end)
 
 UICorner_20.Parent = InvisibleResetToStop
 
+UICorner_20.Parent = InvisibleResetToStop
+
 Elements.Name = "Elements"
 Elements.Parent = Mainscript
 
@@ -646,7 +650,7 @@ UICorner_23.Parent = Title
 
 -- Scripts
 
-local function LVCDP_fake_script() -- BarrelRollResetToStop.Rainbow 
+local function EGSJ_fake_script() -- BarrelRollResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', BarrelRollResetToStop)
 
 	local textButton = script.Parent
@@ -689,8 +693,8 @@ local function LVCDP_fake_script() -- BarrelRollResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(LVCDP_fake_script)()
-local function VXBM_fake_script() -- BowDownResetToStop.Rainbow 
+coroutine.wrap(EGSJ_fake_script)()
+local function XDKA_fake_script() -- BowDownResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', BowDownResetToStop)
 
 	local textButton = script.Parent
@@ -733,8 +737,8 @@ local function VXBM_fake_script() -- BowDownResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(VXBM_fake_script)()
-local function GAYCFB_fake_script() -- CrawlResetToStop.Rainbow 
+coroutine.wrap(XDKA_fake_script)()
+local function PSIJCJ_fake_script() -- CrawlResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', CrawlResetToStop)
 
 	local textButton = script.Parent
@@ -777,8 +781,8 @@ local function GAYCFB_fake_script() -- CrawlResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(GAYCFB_fake_script)()
-local function AIZITOG_fake_script() -- CrouchResetToStop.Rainbow 
+coroutine.wrap(PSIJCJ_fake_script)()
+local function NGHJQ_fake_script() -- CrouchResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', CrouchResetToStop)
 
 	local textButton = script.Parent
@@ -821,8 +825,8 @@ local function AIZITOG_fake_script() -- CrouchResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(AIZITOG_fake_script)()
-local function GGBRXRY_fake_script() -- DabResetToStop.Rainbow 
+coroutine.wrap(NGHJQ_fake_script)()
+local function FOHBZVU_fake_script() -- DabResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', DabResetToStop)
 
 	local textButton = script.Parent
@@ -865,8 +869,8 @@ local function GGBRXRY_fake_script() -- DabResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(GGBRXRY_fake_script)()
-local function PUISA_fake_script() -- FaintResetToStop.Rainbow 
+coroutine.wrap(FOHBZVU_fake_script)()
+local function JAAUCEG_fake_script() -- FaintResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', FaintResetToStop)
 
 	local textButton = script.Parent
@@ -909,8 +913,8 @@ local function PUISA_fake_script() -- FaintResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(PUISA_fake_script)()
-local function HEOMH_fake_script() -- FloatingHeadResetToStop.Rainbow 
+coroutine.wrap(JAAUCEG_fake_script)()
+local function LNSNDCW_fake_script() -- FloatingHeadResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', FloatingHeadResetToStop)
 
 	local textButton = script.Parent
@@ -953,8 +957,8 @@ local function HEOMH_fake_script() -- FloatingHeadResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(HEOMH_fake_script)()
-local function RRCGQ_fake_script() -- FloatingSitResetToStop.Rainbow 
+coroutine.wrap(LNSNDCW_fake_script)()
+local function XEJE_fake_script() -- FloatingSitResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', FloatingSitResetToStop)
 
 	local textButton = script.Parent
@@ -997,8 +1001,8 @@ local function RRCGQ_fake_script() -- FloatingSitResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(RRCGQ_fake_script)()
-local function HPXRZV_fake_script() -- HappyDanceResetToStop.Rainbow 
+coroutine.wrap(XEJE_fake_script)()
+local function ZUFWUD_fake_script() -- HappyDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', HappyDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1041,8 +1045,8 @@ local function HPXRZV_fake_script() -- HappyDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(HPXRZV_fake_script)()
-local function YRPRR_fake_script() -- InsaneResetToStop.Rainbow 
+coroutine.wrap(ZUFWUD_fake_script)()
+local function UQQQHV_fake_script() -- InsaneResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', InsaneResetToStop)
 
 	local textButton = script.Parent
@@ -1085,8 +1089,8 @@ local function YRPRR_fake_script() -- InsaneResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(YRPRR_fake_script)()
-local function DBDG_fake_script() -- ArmsOutResetToStop.Rainbow 
+coroutine.wrap(UQQQHV_fake_script)()
+local function ATCZTY_fake_script() -- ArmsOutResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', ArmsOutResetToStop)
 
 	local textButton = script.Parent
@@ -1129,8 +1133,8 @@ local function DBDG_fake_script() -- ArmsOutResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(DBDG_fake_script)()
-local function GXBG_fake_script() -- LevitateResetToStop.Rainbow 
+coroutine.wrap(ATCZTY_fake_script)()
+local function YTSAD_fake_script() -- LevitateResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', LevitateResetToStop)
 
 	local textButton = script.Parent
@@ -1173,8 +1177,8 @@ local function GXBG_fake_script() -- LevitateResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(GXBG_fake_script)()
-local function WFGKG_fake_script() -- MoonDanceResetToStop.Rainbow 
+coroutine.wrap(YTSAD_fake_script)()
+local function DNIMH_fake_script() -- MoonDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', MoonDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1217,8 +1221,8 @@ local function WFGKG_fake_script() -- MoonDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(WFGKG_fake_script)()
-local function OWZG_fake_script() -- MovingDanceResetToStop.Rainbow 
+coroutine.wrap(DNIMH_fake_script)()
+local function OKDPYOK_fake_script() -- MovingDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', MovingDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1261,8 +1265,8 @@ local function OWZG_fake_script() -- MovingDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(OWZG_fake_script)()
-local function QQQF_fake_script() -- PunchResetToStop.Rainbow 
+coroutine.wrap(OKDPYOK_fake_script)()
+local function YREY_fake_script() -- PunchResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', PunchResetToStop)
 
 	local textButton = script.Parent
@@ -1305,8 +1309,8 @@ local function QQQF_fake_script() -- PunchResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(QQQF_fake_script)()
-local function UNARN_fake_script() -- SlapResetToStop.Rainbow 
+coroutine.wrap(YREY_fake_script)()
+local function FPYUSY_fake_script() -- SlapResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SlapResetToStop)
 
 	local textButton = script.Parent
@@ -1349,8 +1353,8 @@ local function UNARN_fake_script() -- SlapResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(UNARN_fake_script)()
-local function JOBC_fake_script() -- SpinAttackResetToStop.Rainbow 
+coroutine.wrap(FPYUSY_fake_script)()
+local function OGDBAWP_fake_script() -- SpinAttackResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SpinAttackResetToStop)
 
 	local textButton = script.Parent
@@ -1393,8 +1397,8 @@ local function JOBC_fake_script() -- SpinAttackResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(JOBC_fake_script)()
-local function NNNB_fake_script() -- SpinDanceResetToStop.Rainbow 
+coroutine.wrap(OGDBAWP_fake_script)()
+local function RXBA_fake_script() -- SpinDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SpinDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1437,8 +1441,8 @@ local function NNNB_fake_script() -- SpinDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(NNNB_fake_script)()
-local function NBPJVO_fake_script() -- SpinResetToStop.Rainbow 
+coroutine.wrap(RXBA_fake_script)()
+local function JFBWX_fake_script() -- SpinResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SpinResetToStop)
 
 	local textButton = script.Parent
@@ -1481,8 +1485,8 @@ local function NBPJVO_fake_script() -- SpinResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(NBPJVO_fake_script)()
-local function LSZRMMU_fake_script() -- InvisibleResetToStop.Rainbow 
+coroutine.wrap(JFBWX_fake_script)()
+local function NKANVB_fake_script() -- InvisibleResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', InvisibleResetToStop)
 
 	local textButton = script.Parent
@@ -1525,8 +1529,8 @@ local function LSZRMMU_fake_script() -- InvisibleResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(LSZRMMU_fake_script)()
-local function QAQR_fake_script() -- Title.Rainbow 
+coroutine.wrap(NKANVB_fake_script)()
+local function HQXQ_fake_script() -- Title.Rainbow 
 	local script = Instance.new('LocalScript', Title)
 
 	local textLabel = script.Parent
@@ -1569,8 +1573,8 @@ local function QAQR_fake_script() -- Title.Rainbow
 	
 	
 end
-coroutine.wrap(QAQR_fake_script)()
-local function NMKXMUD_fake_script() -- Frame.Drag 
+coroutine.wrap(HQXQ_fake_script)()
+local function ICRWTB_fake_script() -- Frame.Drag 
 	local script = Instance.new('LocalScript', Frame)
 
 	local frame = script.Parent
@@ -1625,8 +1629,8 @@ local function NMKXMUD_fake_script() -- Frame.Drag
 	
 	
 end
-coroutine.wrap(NMKXMUD_fake_script)()
-local function XKYTPBK_fake_script() -- BloxxyAnimationsHub.Keybind 
+coroutine.wrap(ICRWTB_fake_script)()
+local function YOJZ_fake_script() -- BloxxyAnimationsHub.Keybind 
 	local script = Instance.new('LocalScript', BloxxyAnimationsHub)
 
 	--[[ idk why did i use chatgpt do do this shit but i did use chatgpt..
@@ -1655,4 +1659,4 @@ local function XKYTPBK_fake_script() -- BloxxyAnimationsHub.Keybind
 	end)
 	
 end
-coroutine.wrap(XKYTPBK_fake_script)()
+coroutine.wrap(YOJZ_fake_script)()
