--- a/Bloxxy Hub V1.1.1
+++ b/Bloxxy Hub V1.1.1
@@ -1,14 +1,7 @@
---[[
+-- Gui to Lua
+-- Version: 3.2
 
-		Name: Bloxxy.Animations.Hub
-		Ui: Asxe- Arceus X Edits
-                Key: Ian
-		Version: 1.1.1
-
-]]
-
-
--- Instances
+-- Instances:
 
 local BloxxyAnimationsHub = Instance.new("ScreenGui")
 local Frame = Instance.new("Frame")
@@ -54,16 +47,21 @@ local SpinResetToStop = Instance.new("TextButton")
 local UICorner_19 = Instance.new("UICorner")
 local InvisibleResetToStop = Instance.new("TextButton")
 local UICorner_20 = Instance.new("UICorner")
-local Elements = Instance.new("Folder")
-local Credits = Instance.new("TextLabel")
+local RToReset = Instance.new("TextButton")
 local UICorner_21 = Instance.new("UICorner")
+local Elements = Instance.new("Folder")
+local UIGradient = Instance.new("UIGradient")
+local Credits = Instance.new("TextLabel")
+local UICorner_22 = Instance.new("UICorner")
 local KeybindInfo = Instance.new("TextLabel")
 local Elements_2 = Instance.new("Folder")
-local UICorner_22 = Instance.new("UICorner")
-local Title = Instance.new("TextLabel")
+local UIGradient_2 = Instance.new("UIGradient")
 local UICorner_23 = Instance.new("UICorner")
+local Title = Instance.new("TextLabel")
+local UICorner_24 = Instance.new("UICorner")
+local UIGradient_3 = Instance.new("UIGradient")
 
--- Properties
+--Properties:
 
 BloxxyAnimationsHub.Name = "Bloxxy Animations Hub"
 BloxxyAnimationsHub.Parent = game.Players.LocalPlayer:WaitForChild("PlayerGui")
@@ -71,8 +69,8 @@ BloxxyAnimationsHub.ZIndexBehavior = Enum.ZIndexBehavior.Sibling
 BloxxyAnimationsHub.ResetOnSpawn = false
 
 Frame.Parent = BloxxyAnimationsHub
-Frame.BackgroundColor3 = Color3.new(0.415686, 0.415686, 0.415686)
-Frame.BorderColor3 = Color3.new(0, 0, 0)
+Frame.BackgroundColor3 = Color3.fromRGB(106, 106, 106)
+Frame.BorderColor3 = Color3.fromRGB(0, 0, 0)
 Frame.BorderSizePixel = 0
 Frame.Position = UDim2.new(0.324447334, 0, 0.26279366, 0)
 Frame.Size = UDim2.new(0, 372, 0, 529)
@@ -80,11 +78,12 @@ Frame.Size = UDim2.new(0, 372, 0, 529)
 Mainscript.Name = "Main script"
 Mainscript.Parent = Frame
 Mainscript.Active = true
-Mainscript.BackgroundColor3 = Color3.new(0.415686, 0.415686, 0.415686)
-Mainscript.BorderColor3 = Color3.new(0, 0, 0)
+Mainscript.BackgroundColor3 = Color3.fromRGB(106, 106, 106)
+Mainscript.BorderColor3 = Color3.fromRGB(0, 0, 0)
 Mainscript.BorderSizePixel = 0
 Mainscript.Position = UDim2.new(0.0215053763, 0, 0.085066162, 0)
 Mainscript.Size = UDim2.new(0, 353, 0, 483)
+Mainscript.CanvasPosition = Vector2.new(0, 1350)
 Mainscript.CanvasSize = UDim2.new(0, 0, 6, 0)
 Mainscript.ScrollBarThickness = 6
 
@@ -591,66 +590,103 @@ UICorner_20.Parent = InvisibleResetToStop
 
 UICorner_20.Parent = InvisibleResetToStop
 
+RToReset.Name = "'R' To Reset"
+RToReset.Parent = Buttons
+RToReset.BackgroundColor3 = Color3.fromRGB(255, 255, 255)
+RToReset.BorderColor3 = Color3.fromRGB(0, 0, 0)
+RToReset.BorderSizePixel = 0
+RToReset.Position = UDim2.new(0.242386162, 0, 0.517730415, 0)
+RToReset.Size = UDim2.new(0, 157, 0, 50)
+RToReset.Font = Enum.Font.SourceSans
+RToReset.Text = "ArmsOut (Reset To Stop)"
+RToReset.TextColor3 = Color3.fromRGB(0, 0, 0)
+RToReset.TextSize = 14.000
+RToReset.MouseButton1Down:Connect(function()
+	local player = game.Players.LocalPlayer
+	local mouse = player:GetMouse()
+	local charX = player.character
+	local A = charX:WaitForChild("Humanoid")
+	mouse.KeyUp:connect(function(key)
+		if key == "r"  then
+			A.Health = 0
+		end
+
+	end)
+	---Made By DevSpine(SpineRX)
+end)
+
+
+UICorner_21.Parent = RToReset
+
 Elements.Name = "Elements"
 Elements.Parent = Mainscript
 
+UIGradient.Color = ColorSequence.new{ColorSequenceKeypoint.new(0.00, Color3.fromRGB(230, 230, 230)), ColorSequenceKeypoint.new(1.00, Color3.fromRGB(230, 230, 230))}
+UIGradient.Parent = Elements
+
 Credits.Name = "Credits"
 Credits.Parent = Elements
-Credits.BackgroundColor3 = Color3.new(1, 1, 1)
-Credits.BackgroundTransparency = 1
-Credits.BorderColor3 = Color3.new(0, 0, 0)
+Credits.BackgroundColor3 = Color3.fromRGB(255, 255, 255)
+Credits.BackgroundTransparency = 1.000
+Credits.BorderColor3 = Color3.fromRGB(0, 0, 0)
 Credits.BorderSizePixel = 0
 Credits.Position = UDim2.new(-0.0169971678, 0, 0.979879916, 0)
 Credits.Size = UDim2.new(0, 341, 0, 16)
 Credits.Font = Enum.Font.SourceSans
 Credits.Text = "Ui Credits- ASXE   Keysystem Credits- IAN"
-Credits.TextColor3 = Color3.new(0, 0, 0)
+Credits.TextColor3 = Color3.fromRGB(0, 0, 0)
 Credits.TextScaled = true
-Credits.TextSize = 14
+Credits.TextSize = 14.000
 Credits.TextWrapped = true
 
-UICorner_21.Parent = Elements
-UICorner_21.CornerRadius = UDim.new(0, 10)
+UICorner_22.CornerRadius = UDim.new(0, 10)
+UICorner_22.Parent = Elements
 
 KeybindInfo.Name = "Keybind Info"
 KeybindInfo.Parent = Elements
-KeybindInfo.BackgroundColor3 = Color3.new(1, 1, 1)
-KeybindInfo.BackgroundTransparency = 1
-KeybindInfo.BorderColor3 = Color3.new(0, 0, 0)
+KeybindInfo.BackgroundColor3 = Color3.fromRGB(255, 255, 255)
+KeybindInfo.BackgroundTransparency = 1.000
+KeybindInfo.BorderColor3 = Color3.fromRGB(0, 0, 0)
 KeybindInfo.BorderSizePixel = 0
 KeybindInfo.Position = UDim2.new(0.0339943357, 0, 0, 0)
 KeybindInfo.Size = UDim2.new(0, 323, 0, 23)
 KeybindInfo.Font = Enum.Font.SourceSansBold
 KeybindInfo.Text = "Keybind- LeftCtrl"
-KeybindInfo.TextColor3 = Color3.new(0, 0, 0)
+KeybindInfo.TextColor3 = Color3.fromRGB(0, 0, 0)
 KeybindInfo.TextScaled = true
-KeybindInfo.TextSize = 14
+KeybindInfo.TextSize = 14.000
 KeybindInfo.TextWrapped = true
 
 Elements_2.Name = "Elements"
 Elements_2.Parent = Frame
 
-UICorner_22.Parent = Elements_2
+UIGradient_2.Color = ColorSequence.new{ColorSequenceKeypoint.new(0.00, Color3.fromRGB(206, 206, 206)), ColorSequenceKeypoint.new(1.00, Color3.fromRGB(206, 206, 206))}
+UIGradient_2.Parent = Elements_2
+
+UICorner_23.Parent = Elements_2
 
 Title.Name = "Title"
 Title.Parent = Elements_2
-Title.BackgroundColor3 = Color3.new(1, 1, 1)
-Title.BorderColor3 = Color3.new(0, 0, 0)
+Title.BackgroundColor3 = Color3.fromRGB(255, 255, 255)
+Title.BorderColor3 = Color3.fromRGB(0, 0, 0)
 Title.BorderSizePixel = 0
 Title.Position = UDim2.new(0.0537634417, 0, 0.0174710546, 0)
 Title.Size = UDim2.new(0, 329, 0, 35)
 Title.Font = Enum.Font.SourceSans
 Title.Text = "[Universal, PC]  Bloxxy Animations Hub"
-Title.TextColor3 = Color3.new(0, 0, 0)
+Title.TextColor3 = Color3.fromRGB(0, 0, 0)
 Title.TextScaled = true
-Title.TextSize = 14
+Title.TextSize = 14.000
 Title.TextWrapped = true
 
-UICorner_23.Parent = Title
+UICorner_24.Parent = Title
 
--- Scripts
+UIGradient_3.Color = ColorSequence.new{ColorSequenceKeypoint.new(0.00, Color3.fromRGB(147, 147, 147)), ColorSequenceKeypoint.new(1.00, Color3.fromRGB(147, 147, 147))}
+UIGradient_3.Parent = Title
 
-local function EGSJ_fake_script() -- BarrelRollResetToStop.Rainbow 
+-- Scripts:
+
+local function YQIER_fake_script() -- BarrelRollResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', BarrelRollResetToStop)
 
 	local textButton = script.Parent
@@ -693,8 +729,8 @@ local function EGSJ_fake_script() -- BarrelRollResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(EGSJ_fake_script)()
-local function XDKA_fake_script() -- BowDownResetToStop.Rainbow 
+coroutine.wrap(YQIER_fake_script)()
+local function USRQWJ_fake_script() -- BowDownResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', BowDownResetToStop)
 
 	local textButton = script.Parent
@@ -737,8 +773,8 @@ local function XDKA_fake_script() -- BowDownResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(XDKA_fake_script)()
-local function PSIJCJ_fake_script() -- CrawlResetToStop.Rainbow 
+coroutine.wrap(USRQWJ_fake_script)()
+local function GOXBNJL_fake_script() -- CrawlResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', CrawlResetToStop)
 
 	local textButton = script.Parent
@@ -781,8 +817,8 @@ local function PSIJCJ_fake_script() -- CrawlResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(PSIJCJ_fake_script)()
-local function NGHJQ_fake_script() -- CrouchResetToStop.Rainbow 
+coroutine.wrap(GOXBNJL_fake_script)()
+local function FTDG_fake_script() -- CrouchResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', CrouchResetToStop)
 
 	local textButton = script.Parent
@@ -825,8 +861,8 @@ local function NGHJQ_fake_script() -- CrouchResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(NGHJQ_fake_script)()
-local function FOHBZVU_fake_script() -- DabResetToStop.Rainbow 
+coroutine.wrap(FTDG_fake_script)()
+local function LJZIY_fake_script() -- DabResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', DabResetToStop)
 
 	local textButton = script.Parent
@@ -869,8 +905,8 @@ local function FOHBZVU_fake_script() -- DabResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(FOHBZVU_fake_script)()
-local function JAAUCEG_fake_script() -- FaintResetToStop.Rainbow 
+coroutine.wrap(LJZIY_fake_script)()
+local function RZLRH_fake_script() -- FaintResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', FaintResetToStop)
 
 	local textButton = script.Parent
@@ -913,8 +949,8 @@ local function JAAUCEG_fake_script() -- FaintResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(JAAUCEG_fake_script)()
-local function LNSNDCW_fake_script() -- FloatingHeadResetToStop.Rainbow 
+coroutine.wrap(RZLRH_fake_script)()
+local function BORD_fake_script() -- FloatingHeadResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', FloatingHeadResetToStop)
 
 	local textButton = script.Parent
@@ -957,8 +993,8 @@ local function LNSNDCW_fake_script() -- FloatingHeadResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(LNSNDCW_fake_script)()
-local function XEJE_fake_script() -- FloatingSitResetToStop.Rainbow 
+coroutine.wrap(BORD_fake_script)()
+local function XDHKZ_fake_script() -- FloatingSitResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', FloatingSitResetToStop)
 
 	local textButton = script.Parent
@@ -1001,8 +1037,8 @@ local function XEJE_fake_script() -- FloatingSitResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(XEJE_fake_script)()
-local function ZUFWUD_fake_script() -- HappyDanceResetToStop.Rainbow 
+coroutine.wrap(XDHKZ_fake_script)()
+local function ITUAD_fake_script() -- HappyDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', HappyDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1045,8 +1081,8 @@ local function ZUFWUD_fake_script() -- HappyDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(ZUFWUD_fake_script)()
-local function UQQQHV_fake_script() -- InsaneResetToStop.Rainbow 
+coroutine.wrap(ITUAD_fake_script)()
+local function OSAF_fake_script() -- InsaneResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', InsaneResetToStop)
 
 	local textButton = script.Parent
@@ -1089,8 +1125,8 @@ local function UQQQHV_fake_script() -- InsaneResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(UQQQHV_fake_script)()
-local function ATCZTY_fake_script() -- ArmsOutResetToStop.Rainbow 
+coroutine.wrap(OSAF_fake_script)()
+local function DCLF_fake_script() -- ArmsOutResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', ArmsOutResetToStop)
 
 	local textButton = script.Parent
@@ -1133,8 +1169,8 @@ local function ATCZTY_fake_script() -- ArmsOutResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(ATCZTY_fake_script)()
-local function YTSAD_fake_script() -- LevitateResetToStop.Rainbow 
+coroutine.wrap(DCLF_fake_script)()
+local function ZMZLRVJ_fake_script() -- LevitateResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', LevitateResetToStop)
 
 	local textButton = script.Parent
@@ -1177,8 +1213,8 @@ local function YTSAD_fake_script() -- LevitateResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(YTSAD_fake_script)()
-local function DNIMH_fake_script() -- MoonDanceResetToStop.Rainbow 
+coroutine.wrap(ZMZLRVJ_fake_script)()
+local function BBLDQ_fake_script() -- MoonDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', MoonDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1221,8 +1257,8 @@ local function DNIMH_fake_script() -- MoonDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(DNIMH_fake_script)()
-local function OKDPYOK_fake_script() -- MovingDanceResetToStop.Rainbow 
+coroutine.wrap(BBLDQ_fake_script)()
+local function BZIFFYA_fake_script() -- MovingDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', MovingDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1265,8 +1301,8 @@ local function OKDPYOK_fake_script() -- MovingDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(OKDPYOK_fake_script)()
-local function YREY_fake_script() -- PunchResetToStop.Rainbow 
+coroutine.wrap(BZIFFYA_fake_script)()
+local function OJZIY_fake_script() -- PunchResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', PunchResetToStop)
 
 	local textButton = script.Parent
@@ -1309,8 +1345,8 @@ local function YREY_fake_script() -- PunchResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(YREY_fake_script)()
-local function FPYUSY_fake_script() -- SlapResetToStop.Rainbow 
+coroutine.wrap(OJZIY_fake_script)()
+local function XNYK_fake_script() -- SlapResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SlapResetToStop)
 
 	local textButton = script.Parent
@@ -1353,8 +1389,8 @@ local function FPYUSY_fake_script() -- SlapResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(FPYUSY_fake_script)()
-local function OGDBAWP_fake_script() -- SpinAttackResetToStop.Rainbow 
+coroutine.wrap(XNYK_fake_script)()
+local function MBDROEH_fake_script() -- SpinAttackResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SpinAttackResetToStop)
 
 	local textButton = script.Parent
@@ -1397,8 +1433,8 @@ local function OGDBAWP_fake_script() -- SpinAttackResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(OGDBAWP_fake_script)()
-local function RXBA_fake_script() -- SpinDanceResetToStop.Rainbow 
+coroutine.wrap(MBDROEH_fake_script)()
+local function SBTPY_fake_script() -- SpinDanceResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SpinDanceResetToStop)
 
 	local textButton = script.Parent
@@ -1441,8 +1477,8 @@ local function RXBA_fake_script() -- SpinDanceResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(RXBA_fake_script)()
-local function JFBWX_fake_script() -- SpinResetToStop.Rainbow 
+coroutine.wrap(SBTPY_fake_script)()
+local function QMPBC_fake_script() -- SpinResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', SpinResetToStop)
 
 	local textButton = script.Parent
@@ -1485,8 +1521,8 @@ local function JFBWX_fake_script() -- SpinResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(JFBWX_fake_script)()
-local function NKANVB_fake_script() -- InvisibleResetToStop.Rainbow 
+coroutine.wrap(QMPBC_fake_script)()
+local function DPDYHME_fake_script() -- InvisibleResetToStop.Rainbow 
 	local script = Instance.new('LocalScript', InvisibleResetToStop)
 
 	local textButton = script.Parent
@@ -1529,8 +1565,52 @@ local function NKANVB_fake_script() -- InvisibleResetToStop.Rainbow
 	end)
 	
 end
-coroutine.wrap(NKANVB_fake_script)()
-local function HQXQ_fake_script() -- Title.Rainbow 
+coroutine.wrap(DPDYHME_fake_script)()
+local function PPEQAXP_fake_script() -- RToReset.Rainbow 
+	local script = Instance.new('LocalScript', RToReset)
+
+	local textButton = script.Parent
+	local RunService = game:GetService("RunService")
+	
+	-- Function to convert HSV to RGB
+	local function HSVToRGB(h, s, v)
+		local r, g, b
+	
+		local i = math.floor(h * 6)
+		local f = h * 6 - i
+		local p = v * (1 - s)
+		local q = v * (1 - f * s)
+		local t = v * (1 - (1 - f) * s)
+	
+		i = i % 6
+	
+		if i == 0 then r, g, b = v, t, p
+		elseif i == 1 then r, g, b = q, v, p
+		elseif i == 2 then r, g, b = p, v, t
+		elseif i == 3 then r, g, b = p, q, v
+		elseif i == 4 then r, g, b = t, p, v
+		elseif i == 5 then r, g, b = v, p, q
+		end
+	
+		return r, g, b
+	end
+	
+	local hue = 0
+	
+	RunService.RenderStepped:Connect(function(deltaTime)
+		hue = hue + deltaTime / 4
+	
+		if hue > 1 then
+			hue = hue - 1
+		end
+	
+		local r, g, b = HSVToRGB(hue, 1, 1)
+		textButton.BackgroundColor3 = Color3.new(r, g, b)
+	end)
+	
+end
+coroutine.wrap(PPEQAXP_fake_script)()
+local function OIBR_fake_script() -- Title.Rainbow 
 	local script = Instance.new('LocalScript', Title)
 
 	local textLabel = script.Parent
@@ -1573,8 +1653,8 @@ local function HQXQ_fake_script() -- Title.Rainbow
 	
 	
 end
-coroutine.wrap(HQXQ_fake_script)()
-local function ICRWTB_fake_script() -- Frame.Drag 
+coroutine.wrap(OIBR_fake_script)()
+local function WRQARG_fake_script() -- Frame.Drag 
 	local script = Instance.new('LocalScript', Frame)
 
 	local frame = script.Parent
@@ -1629,8 +1709,8 @@ local function ICRWTB_fake_script() -- Frame.Drag
 	
 	
 end
-coroutine.wrap(ICRWTB_fake_script)()
-local function YOJZ_fake_script() -- BloxxyAnimationsHub.Keybind 
+coroutine.wrap(WRQARG_fake_script)()
+local function NCXTVBI_fake_script() -- BloxxyAnimationsHub.Keybind 
 	local script = Instance.new('LocalScript', BloxxyAnimationsHub)
 
 	--[[ idk why did i use chatgpt do do this shit but i did use chatgpt..
@@ -1659,4 +1739,4 @@ local function YOJZ_fake_script() -- BloxxyAnimationsHub.Keybind
 	end)
 	
 end
-coroutine.wrap(YOJZ_fake_script)()
+coroutine.wrap(NCXTVBI_fake_script)()
